--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
 					</ul>
 				</div>
 				<div class="l-top__contents--topics">
-					兵庫で有名なあの企業含め3日間合計で120社と出会える！<br>
-					最大1万5千円分のギフト券がもらえる！就活応援キャンペーンを実施中！！
+					<ul>
+						<li>兵庫県内の企業<span>120社</span>が集結</li>
+						<li>あの<span>有名な企業</span>とも出会える</li>
+						<li>誰でも最大<span>1万5千円分</span>のギフト券がもらえる就活応援キャンペーン実施</li>
+					</ul>
 				</div>
 			</div>
 		</section>
@@ -92,7 +95,7 @@
 						<p>社員同士が仲のいい社風</p>
 					</div>
 					<div class="l-date__contents--button">
-						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="1">予約する</a>
+						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="1">この日程に予約する</a>
 						<a href="#list_area" class="btn btn_list blurTrigger" date-id="1">参加企業を見る</a>
 					</div>
 				</div>
@@ -107,7 +110,7 @@
 						<p>業界1の生産高</p>
 					</div>
 					<div class="l-date__contents--button">
-						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="2">予約する</a>
+						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="2">この日程に予約する</a>
 						<a href="#list_area" class="btn btn_list blurTrigger" date-id="2">参加企業を見る</a>
 					</div>
 				</div>
@@ -123,7 +126,7 @@
 						<p>社員同士が仲のいい社風</p>
 					</div>
 					<div class="l-date__contents--button">
-						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="3">予約する</a>
+						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="3">この日程に予約する</a>
 						<a href="#list_area" class="btn btn_list blurTrigger" date-id="3">参加企業を見る</a>
 					</div>
 				</div>
@@ -138,7 +141,7 @@
 						<p>業界1の生産高</p>
 					</div>
 					<div class="l-date__contents--button">
-						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="4">予約する</a>
+						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="4">この日程に予約する</a>
 						<a href="#list_area" class="btn btn_list blurTrigger" date-id="4">参加企業を見る</a>
 					</div>
 				</div>
@@ -154,7 +157,7 @@
 						<p>社員同士が仲のいい社風</p>
 					</div>
 					<div class="l-date__contents--button">
-						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="5">予約する</a>
+						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="5">この日程に予約する</a>
 						<a href="#list_area" class="btn btn_list blurTrigger" date-id="5">参加企業を見る</a>
 					</div>
 				</div>
@@ -169,7 +172,7 @@
 						<p>業界1の生産高</p>
 					</div>
 					<div class="l-date__contents--button">
-						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="6">予約する</a>
+						<a href="#reserve_area" class="btn btn_primary blurTrigger" date-id="6">この日程に予約する</a>
 						<a href="#list_area" class="btn btn_list blurTrigger" date-id="6">参加企業を見る</a>
 					</div>
 				</div>
@@ -335,12 +338,13 @@
 			<div class="l-campaign__body">
 				<h2>CAMPAIGN</h2>
 				<div class="l-campaign__contents">
+					<div class="l-campaign__contents--title">就活応援キャンペーン</div>
 					<div class="l-campaign__contents--top">
 						<img src="assets/img/campaign_top.png">
 					</div>
 					<div class="l-campaign__contents--text">
-						イベントのブース訪問数によってQUOカードGET！<br>
-						企業研究を深めながらキャンペーンにも参加して就活頑張ろう！
+						企業ブースの訪問数に応じてギフト券をGET！<br>
+						企業研究を深めながらキャンペーンも参加して就活を頑張ろう！
 					</div>
 					<div class="l-campaign__contents--step">
 						<img src="assets/img/campaign_step.png">
