--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="noindex,nofollow"><meta name="keywords"  content="">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Lato:700%7CKosugi+Maru&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css?ver=231220">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css?ver=231222">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,13 +63,14 @@
 						<li><img src="assets/img/logo/logo_05.jpg" alt="" decoding="async" loading="lazy"></li>
 					</ul>
 					<ul class="slider_logo list2">
-						<li><img src="assets/img/logo/logo_06.png" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/logo/logo_07.png" alt="" decoding="async" loading="lazy"></li>
+						<li><img src="assets/img/logo/logo_06.jpg" alt="" decoding="async" loading="lazy"></li>
+						<li><img src="assets/img/logo/logo_07.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_08.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_09.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_10.jpg" alt="" decoding="async" loading="lazy"></li>
 					</ul>
 				</div>
+<!--
 				<div class="l-top__contents--topics">
 					<ul>
 						<li class="hyougo">兵庫県内の企業<span class="">120社</span>が集結</li>
@@ -77,9 +78,9 @@
 						<li class="campaign">最大<span class="">1万5千円分</span>のギフト券がもらえる就活応援キャンペーン実施</li>
 					</ul>
 				</div>
+			-->
 			</div>
 		</section>
-
 		<section class="l-date">
 			<div class="paging">
 				<div class="left"></div>
@@ -280,7 +281,13 @@
 					</div>
 					<div class="l-seminar__contents--title"><span>評価されるエントリーシートはコレ！</span><br>人事はエントリーシートで何を見ているのか？</div>
 					<div class="l-seminar__contents--text">
-						テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+						<ul>
+							<li>エントリーシートは外見が9割</li>
+							<li>人事が見ているのは入社後の再現性</li>
+							<li>再現性をアピールするための自己分析の方法</li>
+							<li>人事の頭に映像化させる表現方法</li>
+							<li>文字数制限に立ち向かう、文字ダイエット</li>
+						</ul>
 					</div>
 				</div>
 				<div class="l-seminar__contents seminar2">
@@ -290,10 +297,13 @@
 					</div>
 					<div class="l-seminar__contents--title">学生時代頑張ったことが無い人のための<br><span>「ガクチカ」攻略講座</span></div>
 					<div class="l-seminar__contents--text">
-「学生時代頑張ったことが無いから、ガクチカが書けない…」<br>
-そんなお悩みで、履歴書作成が進んでいない方へ…<br>
-学生時代頑張ったことが無いと思っていても、今やりたいことが無くても「ガクチカ」は作れます！<br>
-その攻略法を30分でレクチャーします！
+						<ul>
+							<li>「料理」「筋トレ」「ゲーム」でもガクチカは成立する</li>
+							<li>日常生活から社会で活かせるスキルを考える</li>
+							<li>自分では普通のことでも、友達からは凄いと思われていること</li>
+							<li>ガクチカは、ある一定時期の「切り取り」を書く</li>
+							<li>「サークルやってない」「バイトやってない」でも合格した事例</li>
+						</ul>
 					</div>
 				</div>
 
@@ -304,10 +314,13 @@
 					</div>
 					<div class="l-seminar__contents--title">やりたいことが無い人のための<br><span>「志望動機」攻略講座</span></div>
 					<div class="l-seminar__contents--text">
-「やりたいこと特に無いから、志望動機が作れない…」<br>
-そんなお悩みで、履歴書作成が進んでいない方へ…<br>
-学生時代頑張ったことが無いと思っていても、今やりたいことが無くても「志望動機」は作れます！<br>
-その攻略法を30分でレクチャーします！
+						<ul>
+							<li>志望動機は使い回してこそ本物</li>
+							<li>志望動機を簡単に量産する方法</li>
+							<li>「土日休みならどこでもいい」でも受かる志望動機</li>
+							<li>就活本に載ってる志望動機はほとんど間違っている</li>
+							<li>志望動機は企業の特徴を羅列するものではない</li>
+						</ul>
 					</div>
 				</div>
 				<div class="l-seminar__contents seminar4">
@@ -317,8 +330,13 @@
 					</div>
 					<div class="l-seminar__contents--title"><span>大改造!!劇的ビフォーアフター</span><br>受かるエントリーシート、落ちるエントリーシート</div>
 					<div class="l-seminar__contents--text">
-						テストテストテストテストテストテストテストテスト
-						テストテストテストテストテストテストテストテスト
+						<ul>
+							<li>受かるESは様々。落ちるESには共通点がある</li>
+							<li>ESは失点を潰していく作業</li>
+							<li>落ちる大半の理由は「よく分からない」</li>
+							<li>字がきれくても読む気になれないES</li>
+							<li>「具体的に書く」は半分正解で、半分不正解</li>
+						</ul>
 					</div>
 				</div>
 
@@ -329,7 +347,13 @@
 					</div>
 					<div class="l-seminar__contents--title">面接ハック大全<br><span>心理学を駆使して、面接官の心を鷲掴みする方法 ～知識編～</span></div>
 					<div class="l-seminar__contents--text">
-						テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+						<ul>
+							<li>面接の空気感は自分で操れる</li>
+							<li>面接官はプロではない。だからこそ大切なこと</li>
+							<li>弱い自己PRもカバーできる心理テクニック</li>
+							<li>緊張を一瞬でほぐす暗示方法</li>
+							<li>陰キャでも面接中は明るくできる</li>
+						</ul>
 					</div>
 				</div>
 				<div class="l-seminar__contents seminar6">
@@ -339,14 +363,18 @@
 					</div>
 					<div class="l-seminar__contents--title">面接ハック大全<br><span>心理学を駆使して、面接官の心を鷲掴みする方法 ～実践編～</span></div>
 					<div class="l-seminar__contents--text">
-						テストテストテストテストテストテストテストテスト
-						テストテストテストテストテストテストテストテスト
+						<ul>
+							<li>人たらしは絶対やっている心を掴む会話術</li>
+							<li>「デキる」と思われる会話の最初の一言集</li>
+							<li>面接官は長い話にイラついている</li>
+							<li>面接官にたくさん話させて内定を勝ち取る方法</li>
+							<li>逆転合格を勝ち取る逆質問</li>
+						</ul>
 					</div>
 				</div>
 				<div class="l-seminar__memo">
 					<div class="l-seminar__memo--text">
-						セミナーはいずれも午後の部のみ開催となります。<br>
-						午前の部はセミナーを開催致しません。
+						セミナーはいずれも午後の部の開催となってます。
 					</div>
 				</div>
 			</div>
