--- a/index.html
+++ b/index.html
@@ -651,6 +651,14 @@
 					</div>
 					<div class="company">
 						<p>
+							<a href="https://job.hari-match.com/pages/company/belltree/" target="_blank" title="企業ページを見る">
+								<img src="assets/img/company/0229_am/belltree.jpg" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>Bell tree株式会社</span></div>
+							</a>
+						</p>
+					</div>
+					<div class="company">
+						<p>
 							<a href="https://job.hari-match.com/pages/company/yasuhira/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0229_am/ヤスヒラ.png" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社ヤスヒラ</span></div>
