--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>合説デザイン案</title>
+<title>兵庫県最大級の合同就職セミナー</title>
 <meta name="description"  content="">
 <meta name="robots" content="noindex,nofollow"><meta name="keywords"  content="">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -12,7 +12,23 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet"></head>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BHF0CH88ZC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BHF0CH88ZC');
+</script>
+
+<!-- User Heat Tag -->
+<script type="text/javascript">
+(function(add, cla){window['UserHeatTag']=cla;window[cla]=window[cla]||function(){(window[cla].q=window[cla].q||[]).push(arguments)},window[cla].l=1*new Date();var ul=document.createElement('script');var tag = document.getElementsByTagName('script')[0];ul.async=1;ul.src=add;tag.parentNode.insertBefore(ul,tag);})('//uh.nakanohito.jp/uhj2/uh.js', '_uhtracker');_uhtracker({id:'uhBOteVO6P'});
+</script>
+<!-- End User Heat Tag -->
+</head>
 <body>
 	<div class="l-splash">
 		<div class="l-splash__text" id="splash_text"></div>
@@ -121,6 +137,7 @@
 					<div class="l-date__contents--tag">
 						<div class="pickup">［ PICK UP ］</div>
 						<p>グローリープロダクツ株式会社</p>
+						<p>山陽百貨店</p>
 						<p>ヤマサ蒲鉾</p>
 					</div>
 					<div class="l-date__contents--button">
@@ -729,6 +746,14 @@
 							<a href="https://job.hari-match.com/pages/company/sanyo/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0229_pm/山陽.png" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社山陽</span></div>
+							</a>
+						</p>
+					</div>
+					<div class="company">
+						<p>
+							<a href="https://job.hari-match.com/pages/company/t6jd0v1x/" target="_blank" title="企業ページを見る">
+								<img src="assets/img/company/0229_pm/山陽百貨店.jpg" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>山陽百貨店</span></div>
 							</a>
 						</p>
 					</div>
