--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 						<p>
 							<a href="https://job.hari-match.com/pages/company/201c3xdx/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0229_am/ショウワグループ.jpg" alt="" decoding="async" loading="lazy">
-								<div class="caption"><span>SHOWA GROUP醸造株式会社</span></div>
+								<div class="caption"><span>SHOWA GROUP株式会社</span></div>
 							</a>
 						</p>
 					</div>
@@ -1044,6 +1044,18 @@
 					</div>
 					<div class="company">
 						<p>
+							<!--
+							<a href="https://job.hari-match.com/pages/company/seiban/" target="_blank" title="企業ページを見る">
+								<img src="assets/img/company/0301_pm/西播通運.jpg" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>西播通運</span></div>
+							</a>
+						-->
+							<img src="assets/img/company/0301_pm/西播通運.jpg" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>西播通運株式会社</span></div>
+						</p>
+					</div>
+					<div class="company">
+						<p>
 							<a href="https://job.hari-match.com/pages/company/sengoku/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0301_pm/千石.jpg" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社千石</span></div>
@@ -1072,6 +1084,18 @@
 								<img src="assets/img/company/0301_pm/日産プリンス兵庫.jpg" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>日産プリンス兵庫販売株式会社</span></div>
 							</a>
+						</p>
+					</div>
+					<div class="company">
+						<p>
+							<!--
+							<a href="https://job.hari-match.com/pages/company/marten/" target="_blank" title="企業ページを見る">
+								<img src="assets/img/company/0301_pm/日本丸天醤油.jpg" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>日本丸天醤油株式会社</span></div>
+							</a>
+						-->
+							<img src="assets/img/company/0301_pm/日本丸天醤油.jpg" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>日本丸天醤油株式会社</span></div>
 						</p>
 					</div>
 					<div class="company">
@@ -1122,10 +1146,14 @@
 					</div>
 					<div class="company">
 						<p>
+							<!--
 							<a href="https://job.hari-match.com/pages/company/yokoyamakiso/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0301_pm/横山基礎工事.jpg" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社横山基礎工事</span></div>
 							</a>
+						-->
+							<img src="assets/img/company/0301_pm/横山基礎工事.jpg" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>株式会社横山基礎工事</span></div>
 						</p>
 					</div>
 					<div class="company">
@@ -1200,7 +1228,7 @@
 						<p>
 							<a href="https://job.hari-match.com/pages/company/p5ha5xsb/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0302_am/楯菱電産.jpg" alt="" decoding="async" loading="lazy">
-								<div class="caption"><span>楯菱電産</span></div>
+								<div class="caption"><span>株式会社楯菱電産</span></div>
 							</a>
 						</p>
 					</div>
@@ -1254,6 +1282,18 @@
 								<img src="assets/img/company/0302_am/平野組.jpg" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社平野組</span></div>
 							</a>
+						</p>
+					</div>
+					<div class="company">
+						<p>
+							<!--
+							<a href="https://job.hari-match.com/pages/company/fujii/" target="_blank" title="企業ページを見る">
+								<img src="assets/img/company/0302_am/フジイ.jpg" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>株式会社フジイ</span></div>
+							</a>
+						-->
+							<img src="assets/img/company/0302_am/フジイ.jpg" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>株式会社フジイ</span></div>
 						</p>
 					</div>
 					<div class="company">
@@ -1357,10 +1397,14 @@
 					</div>
 					<div class="company">
 						<p>
+							<!--
 							<a href="https://job.hari-match.com/pages/company/neo-car/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0302_pm/ネオ.jpg" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社ネオ</span></div>
 							</a>
+						-->
+								<img src="assets/img/company/0302_pm/ネオ.jpg" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>株式会社ネオ</span></div>
 						</p>
 					</div>
 					<div class="company">
@@ -1440,6 +1484,6 @@
 	<script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js"></script>
-	<script src="assets/js/script.js?ver=231220"></script>
+	<script src="assets/js/script.js?ver=240122_2"></script>
 	</body>
 </html>
