--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MDD2MNGH');</script>
+<!-- End Google Tag Manager -->
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BHF0CH88ZC"></script>
 <script>
@@ -30,6 +39,11 @@
 <!-- End User Heat Tag -->
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MDD2MNGH"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
 	<div class="l-splash">
 		<div class="l-splash__text" id="splash_text"></div>
 		<div class="loader_cover loader_cover-up"></div>
@@ -79,11 +93,12 @@
 						<li><img src="assets/img/logo/logo_05.jpg" alt="" decoding="async" loading="lazy"></li>
 					</ul>
 					<ul class="slider_logo list2">
-						<li><img src="assets/img/logo/logo_06.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/logo/logo_11.png" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_07.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_08.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_09.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/logo/logo_10.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/logo/logo_10.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/logo/logo_06.jpg" alt="" decoding="async" loading="lazy"></li>
 					</ul>
 				</div>
 <!--
@@ -122,7 +137,8 @@
 					<div class="l-date__contents--tag">
 						<div class="pickup">［ PICK UP ］</div>
 						<p>キング醸造株式会社</p>
-						<p>ダイネン株式会社</p>
+            <p>株式会社サンテレビジョン</p>
+            <p>ダイネン株式会社</p>
 					</div>
 					<div class="l-date__contents--button">
 							<a href="#reserve_area" class="btn btn_primary blurTrigger" event-id="18">この日程に予約する</a>
@@ -137,8 +153,8 @@
 					<div class="l-date__contents--tag">
 						<div class="pickup">［ PICK UP ］</div>
 						<p>グローリープロダクツ株式会社</p>
-						<p>山陽百貨店</p>
-						<p>ヤマサ蒲鉾</p>
+						<p>株式会社山陽百貨店</p>
+						<p>ヤマサ蒲鉾株式会社</p>
 					</div>
 					<div class="l-date__contents--button">
 						<a href="#reserve_area" class="btn btn_primary blurTrigger" event-id="19">この日程に予約する</a>
@@ -153,8 +169,8 @@
 					<div class="l-date__contents--date">3月1日（金）午前</div>
 					<div class="l-date__contents--tag">
 						<div class="pickup">［ PICK UP ］</div>
-						<p>神戸新聞社</p>
-						<p>田口食品</p>
+						<p>株式会社神戸新聞社</p>
+						<p>田口食品株式会社</p>
 					</div>
 					<div class="l-date__contents--button">
 						<a href="#reserve_area" class="btn btn_primary blurTrigger" event-id="20">この日程に予約する</a>
@@ -200,7 +216,7 @@
 					<div class="l-date__contents--tag">
 						<div class="pickup">［ PICK UP ］</div>
 						<p>明石市役所</p>
-						<p>ヤマサ蒲鉾</p>
+						<p>ヤマサ蒲鉾株式会社</p>
 						</div>
 					<div class="l-date__contents--button">
 						<a href="#reserve_area" class="btn btn_primary blurTrigger" event-id="23">この日程に予約する</a>
@@ -606,6 +622,12 @@
 							</a>
 						</p>
 					</div>
+          <div class="company">
+						<p>
+							<img src="assets/img/company/0229_am/サンテレビ.png" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>株式会社サンテレビジョン</span></div>
+						</p>
+					</div>
 					<div class="company">
 						<p>
 							<img src="assets/img/company/0229_am/シオタニ.jpg" alt="" decoding="async" loading="lazy">
@@ -634,6 +656,12 @@
 								<img src="assets/img/company/0229_am/dainen.png" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>ダイネン株式会社</span></div>
 							</a>
+						</p>
+					</div>
+          <div class="company">
+						<p>
+							<img src="assets/img/company/0229_am/高岡の里.jpg" alt="" decoding="async" loading="lazy">
+  							<div class="caption"><span>社会福祉法人高岡の里福祉会</span></div>
 						</p>
 					</div>
 					<div class="company">
@@ -674,11 +702,27 @@
 							</a>
 						</p>
 					</div>
+          <div class="company">
+            <p>
+              <a href="https://job.hari-match.com/pages/company/yasashiite/" target="_blank" title="企業ページを見る">
+                <img src="assets/img/company/0229_am/やさしい手.jpg" alt="" decoding="async" loading="lazy">
+  							<div class="caption"><span>株式会社やさしい手</span></div>
+              </a>
+            </p>
+          </div>
 					<div class="company">
 						<p>
 							<a href="https://job.hari-match.com/pages/company/yasuhira/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0229_am/ヤスヒラ.png" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社ヤスヒラ</span></div>
+							</a>
+						</p>
+					</div>
+          <div class="company">
+						<p>
+              <a href="https://job.hari-match.com/pages/company/yodop/" target="_blank" title="企業ページを見る">
+								<img src="assets/img/company/0229_am/ヨドプレ.png" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>ヨドプレ株式会社</span></div>
 							</a>
 						</p>
 					</div>
@@ -753,7 +797,7 @@
 						<p>
 							<a href="https://job.hari-match.com/pages/company/t6jd0v1x/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0229_pm/山陽百貨店.jpg" alt="" decoding="async" loading="lazy">
-								<div class="caption"><span>山陽百貨店</span></div>
+								<div class="caption"><span>株式会社山陽百貨店</span></div>
 							</a>
 						</p>
 					</div>
@@ -907,6 +951,12 @@
 							</a>
 						</p>
 					</div>
+          <div class="company">
+						<p>
+							<img src="assets/img/company/0301_am/近畿工業.jpg" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>近畿工業株式会社</span></div>
+						</p>
+					</div>
 					<div class="company">
 						<p>
 							<img src="assets/img/company/0301_am/神戸新聞.jpg" alt="" decoding="async" loading="lazy">
@@ -956,6 +1006,14 @@
 							<a href="https://job.hari-match.com/pages/company/28girk1u/" target="_blank" title="企業ページを見る">
 								<img src="assets/img/company/0301_am/トヨタレンタリース.jpg" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社トヨタレンタリース兵庫</span></div>
+							</a>
+						</p>
+					</div>
+          <div class="company">
+						<p>
+							<a href="https://job.hari-match.com/pages/company/nesta/" target="_blank" title="企業ページを見る">
+								<img src="assets/img/company/0301_am/ネスタリゾート神戸.jpg" alt="" decoding="async" loading="lazy">
+								<div class="caption"><span>株式会社ネスタリゾート神戸</span></div>
 							</a>
 						</p>
 					</div>
@@ -1312,6 +1370,12 @@
 							</a>
 						</p>
 					</div>
+          <div class="company">
+						<p>
+							<img src="assets/img/company/0302_am/ラピスネット.jpg" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>株式会社ラピスネット</span></div>
+						</p>
+					</div>
 				</div>
 			</div>
 			<div class="l-modal__company date6">
@@ -1337,6 +1401,14 @@
 								<img src="assets/img/company/0302_pm/イボキン.jpg" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>株式会社イボキン</span></div>
 							</a>
+						</p>
+					</div>
+          <div class="company">
+						<p>
+              <a href="https://job.hari-match.com/pages/company/je8wj8iq/" target="_blank" title="企業ページを見る">
+  							<img src="assets/img/company/0302_pm/MHI.jpg" alt="" decoding="async" loading="lazy">
+  							<div class="caption"><span>MHIソリューションテクノロジーズ株式会社</span></div>
+              </a>
 						</p>
 					</div>
 					<div class="company">
