--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="noindex,nofollow"><meta name="keywords"  content="">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Lato:700%7CKosugi+Maru&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css?ver=231222">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css?ver=240126">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/css/modaal.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -572,7 +572,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <div id="list_area" class="l-modal">
 			<div class="l-modal__company date1">
-				<h4><span>2024年2月29日（木）午前の部</span>参加企業一覧</h4>
+				<h4><span>2024年2月29日(木) 午前の部</span>参加企業一覧</h4>
 				<div class="l-modal__company--flex">
 					<div class="company">
 						<p>
@@ -729,7 +729,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 			</div>
 			<div class="l-modal__company date2">
-				<h4><span>2024年2月29日（木）午後の部</span>参加企業一覧</h4>
+				<h4><span>2024年2月29日(木) 午後の部</span>参加企業一覧</h4>
 				<div class="l-modal__company--flex">
 					<div class="company">
 						<p>
@@ -893,7 +893,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			</div>
 
 			<div class="l-modal__company date3">
-				<h4><span>2024年3月1日（金）午前の部</span>参加企業一覧</h4>
+				<h4><span>2024年3月1日(金) 午前の部</span>参加企業一覧</h4>
 				<div class="l-modal__company--flex">
 					<div class="company">
 						<p>
@@ -1052,7 +1052,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 			</div>
 			<div class="l-modal__company date4">
-				<h4><span>2024年3月1日（金）午後の部</span>参加企業一覧</h4>
+				<h4><span>2024年3月1日(金) 午後の部</span>参加企業一覧</h4>
 				<div class="l-modal__company--flex">
 					<div class="company">
 						<p>
@@ -1226,7 +1226,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			</div>
 
 			<div class="l-modal__company date5">
-				<h4><span>2024年3月2日（土）午前の部</span>参加企業一覧</h4>
+				<h4><span>2024年3月2日(土) 午前の部</span>参加企業一覧</h4>
 				<div class="l-modal__company--flex">
 					<div class="company">
 						<p>
@@ -1372,14 +1372,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</div>
           <div class="company">
 						<p>
-							<img src="assets/img/company/0302_am/ラピスネット.jpg" alt="" decoding="async" loading="lazy">
+							<img src="assets/img/company/0302_am/ラピスネット.jpg?ver=240126" alt="" decoding="async" loading="lazy">
 							<div class="caption"><span>株式会社ラピスネット</span></div>
 						</p>
 					</div>
 				</div>
 			</div>
 			<div class="l-modal__company date6">
-				<h4><span>2024年3月2日（土）午後の部</span>参加企業一覧</h4>
+				<h4><span>2024年3月2日(土) 午後の部</span>参加企業一覧</h4>
 				<div class="l-modal__company--flex">
 					<div class="company">
 						<p>
@@ -1406,7 +1406,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="company">
 						<p>
               <a href="https://job.hari-match.com/pages/company/je8wj8iq/" target="_blank" title="企業ページを見る">
-  							<img src="assets/img/company/0302_pm/MHI.jpg" alt="" decoding="async" loading="lazy">
+  							<img src="assets/img/company/0302_pm/MHI.jpg?ver=240126" alt="" decoding="async" loading="lazy">
   							<div class="caption"><span>MHIソリューションテクノロジーズ株式会社</span></div>
               </a>
 						</p>
