--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<li><img src="assets/img/logo/logo_03.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_04.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_05.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/logo/logo_06.jpg" alt="" decoding="async" loading="lazy"></li>
 					</ul>
 					<ul class="slider_logo list2">
             <li><img src="assets/img/logo/logo_11.png" alt="" decoding="async" loading="lazy"></li>
@@ -98,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<li><img src="assets/img/logo/logo_08.jpg" alt="" decoding="async" loading="lazy"></li>
 						<li><img src="assets/img/logo/logo_09.jpg" alt="" decoding="async" loading="lazy"></li>
             <li><img src="assets/img/logo/logo_10.jpg" alt="" decoding="async" loading="lazy"></li>
-            <li><img src="assets/img/logo/logo_06.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/logo/logo_12.png" alt="" decoding="async" loading="lazy"></li>
 					</ul>
 				</div>
 <!--
@@ -1368,6 +1369,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<img src="assets/img/company/0302_am/ブンセン.png" alt="" decoding="async" loading="lazy">
 								<div class="caption"><span>ブンセン株式会社</span></div>
 							</a>
+						</p>
+					</div>
+          <div class="company">
+						<p>
+							<img src="assets/img/company/0302_am/ヤマソロ.jpg" alt="" decoding="async" loading="lazy">
+							<div class="caption"><span>株式会社ヤマソロ</span></div>
 						</p>
 					</div>
           <div class="company">
