--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</div>
           <div class="company">
 						<p>
-							<img src="assets/img/company/0229_am/高岡の里.jpg" alt="" decoding="async" loading="lazy">
+							<img src="assets/img/company/0229_am/高岡の里.png" alt="" decoding="async" loading="lazy">
   							<div class="caption"><span>社会福祉法人高岡の里福祉会</span></div>
 						</p>
 					</div>
@@ -706,7 +706,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="company">
             <p>
               <a href="https://job.hari-match.com/pages/company/yasashiite/" target="_blank" title="企業ページを見る">
-                <img src="assets/img/company/0229_am/やさしい手.jpg" alt="" decoding="async" loading="lazy">
+                <img src="assets/img/company/0229_am/やさしい手.jpg?ver=240131" alt="" decoding="async" loading="lazy">
   							<div class="caption"><span>株式会社やさしい手</span></div>
               </a>
             </p>
