--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>兵庫県最大級の合同就職セミナー</title>
-<meta name="description"  content="">
-<meta name="robots" content="noindex,nofollow"><meta name="keywords"  content="">
+<title>2025卒学生向けの兵庫県最大級の合同就職説明会｜はりまっち</title>
+<meta name="description"  content="2025卒学生向けの兵庫県最大級の合同就職説明会。姫路・加古川・明石・神戸・たつの・赤穂の地元企業が3日間合計で120社参加！ぜひ参加して地元で就活をしよう！">
+<meta name="keywords"  content="合同就職説明会,合説,兵庫,姫路,明石,加古川,神戸">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Lato:700%7CKosugi+Maru&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css?ver=240126">
