--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<p>5ターム目</p>
 							</li>
 							<li>
-								<time>16:00 ～</time>
+								<time>16:05 ～</time>
 								<p>エンディングセミナー</p>
 							</li>
 						</ul>
@@ -440,34 +440,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<h2>GALLERY</h2>
 				<div class="l-gallery__contents">
 					<ul class="slider_gallery">
-						<li><img src="assets/img/gallery/IMG_8814.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8833.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8847.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8872.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8906.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8919.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_7924.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_7932.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_7935.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_7952.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_7962.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_7975.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_7986.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8058.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8065.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8072.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8086.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8094.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8136.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8142.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8979.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8981.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8982.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_8995.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_9001.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_9009.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_9013.jpg" alt="" decoding="async" loading="lazy"></li>
-						<li><img src="assets/img/gallery/IMG_9017.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/gallery/IMG_9497.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/gallery/IMG_5049.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/gallery/IMG_5068.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/gallery/IMG_9434.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/gallery/IMG_9499.jpg" alt="" decoding="async" loading="lazy"></li>
+            <li><img src="assets/img/gallery/IMG_7813.jpg" alt="" decoding="async" loading="lazy"></li>
 					</ul>
 				</div>
 			</div>
@@ -1563,6 +1541,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js"></script>
-	<script src="assets/js/script.js?ver=240122_2"></script>
+	<script src="assets/js/script.js?ver=240209"></script>
 	</body>
 </html>
